# flask-zero-to-pro

./: .gitignore  LICENSE.md  README.md  pyproject.toml  repo_text_dump.py  run.py
app/: __init__.py  config.py  extensions.py  routes.py
app/main/: __init__.py  routes.py
app/main/templates/main/: about.html  contact.html  form_example.html  home.html
app/static/css/: style.css
app/templates/: 404.html  500.html  home.html  layout.html
