[project]
name = "flask-zero-to-pro"
version = "0.1.0"
description = "Professional Flask Project Template"
authors = [
    {name = "Marwan Tarek Zaky"}
]
license = "CC BY‑NC 4.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
